--- a/playbook.yml
+++ b/playbook.yml
@@ -10,11 +10,11 @@
   pre_tasks:
     - name: Ensure "apache" user exists
       yum: name=httpd state=present
-      when: apache_service
+      when: xwiki_apache_service
 
     - name: Ensure "postfix" user exists
       yum: name=postfix state=present
-      when: postfix_service
+      when: xwiki_postfix_service
 
   roles:
     # Database installation and configuration
@@ -41,7 +41,7 @@
     - role: rastandy.libreoffice-server
       libreoffice_user: "{{ xwiki_user }}"
       libreoffice_group: "{{ xwiki_group }}"
-      when: libreoffice_service
+      when: xwiki_libreoffice_service
 
     - role: groover.tomcat
       tomcat_version: "{{ xwiki_tomcat_version }}"
@@ -69,7 +69,7 @@
       ssl_certs_organization: "climateurope"
       ssl_certs_state: "Europe"
       ssl_certs_days: "1825"
-      when: apache_service
+      when: xwiki_apache_service
 
     - role: rastandy.apache
       apache_global_vhost_settings: |
@@ -90,10 +90,10 @@
             ProxyPreserveHost On
             ProxyPass / ajp://localhost:18009/
             ProxyPassReverse / ajp://localhost:18009/
-      when: apache_service
+      when: xwiki_apache_service
 
     - role: rastandy.postfix
-      when: postfix_service
+      when: xwiki_postfix_service
 
     - role: geerlingguy.firewall
       firewall_allowed_tcp_ports:
@@ -103,7 +103,7 @@
         - "9101" # bacula
         - "9102" # bacula
         - "9103" # bacula
-      when: firewall_service
+      when: xwiki_firewall_service
 
     # Setup the database backup
     - role: Stouts.backup
@@ -128,22 +128,22 @@
           user: "{{ xwiki_user }}"
           source: "{{ xwiki_environment_permanent_directory }}"
           target: file:///{{ xwiki_tomcat_path }}/backups
-      when: backup_service
+      when: xwiki_backup_service
 
     # Activate bacula-fd client service
     - role: rastandy.bacula-client
-      when: backup_service
+      when: xwiki_backup_service
 
     - role: bennojoy.ntp
 
     - role: rastandy.riemann-server
       riemann_bind_address: 127.0.0.1
       riemann_extra: true
-      when: monitoring_service
+      when: xwiki_monitoring_service
 
     - role: rastandy.riemann-client
       riemann_tool_health: false
-      when: monitoring_service
+      when: xwiki_monitoring_service
 
     - role: rastandy.collectd
       collectd_global_options_default_interval: 5
@@ -187,7 +187,7 @@
                       - Protocol: TCP
                       - StoreRates: false
                       - AlwaysAppendDS: false
-      when: monitoring_service
+      when: xwiki_monitoring_service
 
   tasks:
     - include: ./install.yml
