--- a/playbook.yml
+++ b/playbook.yml
@@ -8,7 +8,8 @@
     - vars.yml
 
   pre_tasks:
-    - stat: path=host_vars/{{ ansible_hostname }}
+    - local_action: stat path=host_vars/{{ ansible_hostname }}
+      become: false
       register: host_vars_file
 
     - include_vars: host_vars/{{ ansible_hostname }}
