--- a/defaults.yml
+++ b/defaults.yml
@@ -32,7 +32,7 @@ tomcat_redis_sha256sum: 7e23260f2481aca88f89838e91cb9ff00548a28ba5a19a88ff99388c
 tomcat_web_xml_schema_version: 3.1
 
 xwiki_tomcat_path: /var/lib/xwiki
-xwiki_catalina_opts: "-server -Dfile.encoding=utf-8 -Xms800m -Xmx1480m -XX:MaxPermSize=256m -Djava.awt.headless=true -XX:+UseParallelGC -XX:MaxGCPauseMillis=100"
+xwiki_catalina_opts: "-server -Dfile.encoding=utf-8 -Xms800m -Xmx1480m -XX:MaxPermSize=256m -Djava.awt.headless=true -XX:+UseParallelGC -XX:MaxGCPauseMillis=100 -Dorg.apache.tomcat.util.buf.UDecoder.ALLOW_ENCODED_SLASH=true"
 
 # environment.permanentDirectory where persistent data is stored
 xwiki_environment_permanent_directory: "{{xwiki_tomcat_path}}/persistent_data/"
