--- a/playbook.yml
+++ b/playbook.yml
@@ -12,7 +12,7 @@
       with_first_found:
         - "host_vars/{{ ansible_hostname }}"
         - "host_vars/default"
-      tags: [letsencrypt, postfix]
+      tags: [letsencrypt, postfix, firewall]
 
     - name: Ensure "apache" user exists
       yum: name=httpd state=present
@@ -137,7 +137,11 @@
         - "9101" # bacula
         - "9102" # bacula
         - "9103" # bacula
+      firewall_allowed_udp_ports:
+        - "60000" # mosh
+        - "60001" # mosh
       when: xwiki_firewall_service and not xwiki_debug
+      tags: firewall
 
     # Setup the database backup
     - role: Stouts.backup
