--- a/install.yml
+++ b/install.yml
@@ -76,3 +76,32 @@
       - "{{ xwiki_clojure_jsr223_filename }}"
   when: xwiki_colojure_scripting
   notify: Restart tomcat-xwiki
+
+- name: Download the ExcelPlugin XWiki plugin and the jxl jar
+  local_action: get_url
+  become: false
+  args:
+    url: "{{ item.url }}"
+    dest: "{{ lib_persistent_data_path_local }}/{{ item.filename }}"
+    checksum: "sha256:{{ item.checksum }}"
+  with_items:
+    - url: "{{ xwiki_plugin_excelplugin_url }}"
+      checksum: "sha256:{{ xwiki_plugin_excelplugin_sha256sum }}"
+      filename: "{{ xwiki_plugin_excelplugin_filename }}"
+    - url: "{{ xwiki_lib_jxl_url }}"
+      checksum: "sha256:{{ xwiki_lib_jxl_sha256sum }}"
+      filename: "{{ xwiki_lib_jxl_filename }}"
+  when: xwiki_plugin_excel
+
+- name: Install the ExcelPlugin XWiki plugin and the jxl jar
+  copy:
+    src: "{{ lib_persistent_data_path_local }}/{{ item }}"
+    dest: "{{ xwiki_path }}/webapps/ROOT/WEB-INF/lib/"
+    owner: "{{ xwiki_user }}"
+    group: "{{ xwiki_group }}"
+    mode: 0644
+  with_items:
+      - "{{ xwiki_plugin_excelplugin_filename }}"
+      - "{{ xwiki_lib_jxl_filename }}"
+  when: xwiki_colojure_scripting
+  notify: Restart tomcat-xwiki
